package com.dmm.bootcamp.yatter2023.domain.model

import com.dmm.bootcamp.yatter2023.common.ddd.Identifier

class StatusId(value: String) : Identifier<String>(value)