package com.dmm.bootcamp.yatter2023.ui.timeline.bindingmodel

data class MediaBindingModel(
    val id: String,
    val type: String,
    val url: String,
    val description: String
)